# vut-ios-project-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  adult_generator.c  adult_generator.h  argument_processor.c  argument_processor.h  child_generator.c  child_generator.h  process_generator.c  process_generator.h  proj2.c  resources.c  resources.h  task.html
scripts/: clean.sh
task/: IOS 2016_2017_ Projekt 2.html
